<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp">

    <ImageView
        android:id="@+id/rowImage"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_weight="1"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:contentDescription="@string/teamphoto" />

    <TextView
        android:id="@+id/rowName"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_weight=".5"
        app:srcCompat="@android:drawable/ic_menu_info_details"
        android:contentDescription="@string/infophoto" />

</LinearLayout>