<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.appdeveloper.rh.cmbteamapp.DetailActivity">

    <ImageView
        android:id="@+id/teamImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:contentDescription="@string/teamphoto" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:gravity="center"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:drawable/editbox_background"
        android:gravity="center"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@android:drawable/editbox_background_normal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bioTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bio"
                android:textAlignment="center"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
